fix: minor layout issues

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -8,4 +8,7 @@ body {
     margin: 0;
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
-  
+
+.app-container {
+  padding: 0 0 0 0 !important;
+}
